--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.data.mongodb.database = youtube-clone
 ### AWS S3 Credentials ###
 cloud.aws.region.static=sa-east-1
 cloud.aws.stack.auto=false
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+cloud.aws.region.use-default-aws-region-chain=true
+cloud.aws.stack=false
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
