--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb.database = youtube-clone
-### AWS S3 Credentials ###
-cloud.aws.region.static=sa-east-1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=youtube-clone
+  ##### Amazon S3 #########
+cloud.aws.region.static=eu-west-2
 cloud.aws.stack.auto=false
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-cloud.aws.region.use-default-aws-region-chain=true
-cloud.aws.stack=false
-logging.level.com.amazonaws.util.EC2MetadataUtils=error
-logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
