--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,9 @@ cloud.aws.region.static=eu-west-2
 cloud.aws.stack.auto=false
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+##OAuth2
+spring.security.oauth2.resourceserver.jwt.issuer.uri=https://dev-i63rcznjs255jxgf.us.auth0.com/
+auth0.audience=http://localhost:8080/
+
+logging.level.org.springframework.security=DEBUG
