--- a/frontend/youtube-clone-ui/package.json
+++ b/frontend/youtube-clone-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/auth0-angular": "^2.1.0",
     "@videogular/ngx-videogular": "^7.0.1",
     "css": "^3.0.0",
     "css-fx-layout": "^3.0.2",
