--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,5 +10,11 @@ spring.servlet.multipart.max-request-size=100MB
 ##OAuth2
 spring.security.oauth2.resourceserver.jwt.issuer.uri=https://dev-i63rcznjs255jxgf.us.auth0.com/
 auth0.audience=http://localhost:8080/
+spring.security.oauth2.client.registration.auth0.client-id=mwAJEhHg0rximXvO3Z3L1BpT8S5ejOIP
+spring.security.oauth2.client.registration.auth0.client-secret=vheznrI4MTw2h5xmuyovrTw1P45ulTFc_OlgyXXDmbOGnavf98zBJh-upUgp358K
+spring.security.oauth2.client.registration.auth0.scope=openid, profile, email
+spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-i63rcznjs255jxgf.us.auth0.com/
+
+auth0.userinfoEndpoint=https://dev-i63rcznjs255jxgf.us.auth0.com/userinfo
 
 logging.level.org.springframework.security=DEBUG
